trybuild_tests/tests/trybuild/fail/model_default_on_pk.rs
use butane::model;

// This should fail - default value on primary key field
#[model]
struct Post {
    #[pk]
    #[default(0)]
    id: i64,
    title: String,
}

fn main() {}
